✨ ファイル修正

--- a/tailwind_import.css
+++ b/tailwind_import.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.header {
+	@apply box-border h-14 w-full;
+}
+.main {
+}
+.aside {
+}
+.footer {
+}
